--- a/chip.html
+++ b/chip.html
@@ -29,7 +29,7 @@
 
         <!-- Study Header -->
         <div class="flex flex-col gap-4">
-            <p class="text-4xl">Community Health Integrated Platform 2.0 (CHIP 2.0)</p>
+            <p class="text-4xl">Community Health Integrated Platform 2.0</p>
             <p class="text-gray-400 font-light">Case study · 12 min read</p>
             <p class="text-gray-300">Problem · Research · Synthesis · Ideation · UI Design · Usability Testing · Key Takeaways</p>
 
