--- a/project-1.html
+++ b/project-1.html
@@ -6,7 +6,7 @@
   <link href="./src/output.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-950 text-gray-200 flex flex-col gap-4">
+<body class="bg-gray-950 text-gray-200 flex flex-col gap-8">
 
     <!-- Top Bar -->
     <div class="w-full flex flex-col items-center pt-3 pb-2 fixed top-0 bg-gray-950">
@@ -19,30 +19,45 @@
     </div>
 
     <!-- Project Hero -->
-    <div class="flex flex-col justify-center mt-8 text-center h-screen px-4">
+    <div class="flex flex-col justify-center text-center h-screen px-4">
         <h1 class="text-3xl font-bold">Community Health Integrated Platform(CHIP) V2.0</h1>
         <h2 class="text-lg text-gray-600 mt-4 italic">Streamlining Healthcare Operations at the Grassroots</h2>
         <img src="./images/chip/chip cover.png" alt="Profile Picture" class="rounded-2xl mt-4">
     </div>
 
+    <hr class="border-t-2 border-gray-700 mx-4">
+
     <!-- Project Overview -->
-    <div class="flex flex-col mt-8 px-4">
+    <div class="flex flex-col px-4">
         <p class="text-2xl font-bold">Project Overview</p>
+        <div class="border-b-4 border-yellow-400 w-16 mt-2"></div>
+
         <p class="text-gray-400 mt-4">CHIP V2.0 is a healthcare software developed by Khushi Baby NGO to digitize and manage public health operations at the last mile. The platform includes modules for Login, Attendance (Punch-IN), User Profiles, Digital Health Survey (DHS) Role-Based Access Control (RBAC), and critical health programs like ABHA linkage, Family Planning, and tracking Maternal and Infant Mortality (IMR/MMR).</p>
     </div>
 
+    <hr class="border-t-2 border-gray-700 mx-4">
+
     <!-- Role & Responsibilities -->
-    <div class="flex flex-col mt-8 px-4">
-        <p class="text-2xl font-bold">Role & Responsibilities</p>
-        <p class="text-gray-400 mt-4">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+    <div class="flex flex-col gap-6 px-4">
+
+        <!-- Section Header -->
+        <div class="flex flex-col gap-4">
+            <div class="flex flex-col gap-2">
+                <p class="text-2xl font-bold">Role & Responsibilities</p>
+                <div class="border-b-4 border-yellow-400 w-16"></div>
+            </div>
+            <p class="text-gray-400">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+        </div>
 
         <!-- Research & Strategy -->
-        <p class="text-xl font-bold mt-4">Research & Strategy</p>
-        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
-            <li>Conducted field visits, user interviews, and usability audits at village, SHC, and PHC levels</li>
-            <li>Collaborated with stakeholders to align user needs with program goals (DHS, ABHA, Family Planning, etc.)</li>
-            <li>Created personas and journey maps for ASHAs, ANMs, CHOs, and MOs</li>
-        </ul>
+        <div class="flex flex-col">
+            <p class="text-xl font-bold">Research & Strategy</p>
+            <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+                <li>Conducted field visits, user interviews, and usability audits at village, SHC, and PHC levels</li>
+                <li>Collaborated with stakeholders to align user needs with program goals (DHS, ABHA, Family Planning, etc.)</li>
+                <li>Created personas and journey maps for ASHAs, ANMs, CHOs, and MOs</li>
+            </ul>
+        </div>
 
         <!-- Experience Design -->
         <p class="text-xl font-bold mt-4">Experience Design</p>
@@ -58,6 +73,56 @@
             <li>Designed workflows and user flows tailored to each role, governed by RBAC (Role-Based Access Control)s</li>
             <li>Structured task flows for high-frequency tasks (Punch-IN, OPD) and complex modules like Digital Health Survey (DHS)</li>
             <li>Created facility-aware navigation logic and module visibility based on user designation</li>
+        </ul>
+
+        <!-- Visual Design -->
+        <p class="text-xl font-bold mt-4">Visual Design</p>
+        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+            <li>Developed a clean, minimal UI optimized for low-literacy users and rural screen sizes</li>
+            <li>Designed color-coded modules and iconography for faster recognition</li>
+            <li>Created a bilingual interface (Hindi/English) and large tap targets for field usability</li>
+        </ul>
+
+        <!-- Testing & Iteration -->
+        <p class="text-xl font-bold mt-4">Testing & Iteration</p>
+        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+            <li>Ran usability testing with ASHAs, ANMs, and PHC staff for real-world validation</li>
+            <li>Refined the DHS module with autosave, offline mode, and sectional progress tracking</li>
+            <li>Improved RBAC interaction through helper tooltips and locked visual states</li>
+        </ul>
+
+        <!-- Collaboration & Handoff -->
+        <p class="text-xl font-bold mt-4">Testing & Iteration</p>
+        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+            <li>Delivered polished, developer-friendly design specs and components</li>
+            <li>Worked closely with the tech team for implementation and QA</li>
+            <li>Integrated post-deployment feedback to improve real-world adoption</li>
+        </ul>
+    </div>
+
+    <hr class="border-t-2 border-gray-700 mx-4">
+
+    <!-- Problem Statement -->
+    <div class="flex flex-col px-4">
+        <p class="text-2xl font-bold">Problem Statement</p>
+        <div class="border-b-4 border-yellow-400 w-16 mt-2"></div>
+
+        <!-- Context & Background -->
+        <p class="text-xl font-bold mt-4">Context & Background</p>
+        <p class="text-gray-400 mt-4">CHIP is accessed by healthcare workers across a <b class="text-gray-200">three-tiered hierarchy:</b></p>
+        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+            <li><b class="text-gray-200">Village Level:</b> ASHA workers</li>
+            <li><b class="text-gray-200">Sub-Health Center (SHC) Level:</b> ANMs and CHOs</li>
+            <li><b class="text-gray-200">Primary Health Center (PHC) Level:</b> Medical Officers (MOs), Staff Nurses, Pharmacists, and Lab Technicians</li>
+        </ul>
+        <p class="text-gray-400 mt-4">To maintain data integrity and workflow clarity, the app is governed by a <b class="text-gray-200">Role-Based Access Control (RBAC) System</b>, which ensures that each user only accesses relevant modules and permissions based on their designation and facility level.</p>
+
+        <!-- User Needs & Business Goals -->
+        <p class="text-xl font-bold mt-4">User Needs & Business Goals</p>
+        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+            <li>Field users needed <b class="text-gray-200">streamlined workflows</b> tailored to their daily tasks.</li>
+            <li>Supervisors required <b class="text-gray-200">visibility into data</b> across levels without clutter.</li>
+            <li>Khushi Baby NGO aimed to <b class="text-gray-200">ensure security, accuracy, and hierarchy alignment</b> across users.</li>
         </ul>
     </div>
     
