verticla line section layout added

--- a/project-1.html
+++ b/project-1.html
@@ -125,6 +125,69 @@
             <li>Khushi Baby NGO aimed to <b class="text-gray-200">ensure security, accuracy, and hierarchy alignment</b> across users.</li>
         </ul>
     </div>
+
+    <hr class="border-t-2 border-gray-700 mx-4">
+
+    <!-- Research -->
+    <div class="flex flex-col gap-6 px-4">
+
+        <!-- Section Header -->
+        <div class="flex flex-col">
+            <p class="text-2xl font-bold">Research</p>
+            <div class="border-b-4 border-yellow-400 w-16 mt-2"></div>
+        </div>
+
+        <!-- Field Observations (Shadowing ASHAs and ANMs) -->
+        <div class="flex flex-col gap-2">
+            <p class="text-xl font-bold mt-4">Field Observations (Shadowing ASHAs and ANMs)</p>
+            <p class="text-gray-400 mt-4">To understand the real-world context of CHIP usage, I conducted immersive field visits to rural areas. I shadowed <b class="text-gray-200">ASHAs and ANMs during their daily routines</b>, particularly while they:</p>
+            <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+                <li>Conducted <b class="text-gray-200">household visits</b> for DHS and other health-related data collection</li>
+                <li>Interacted with community members, often in challenging physical or social conditions</li>
+                <li>Used CHIP on <b class="text-gray-200">low-end Android phones</b>, sometimes with intermittent network or power access</li>
+            </ul>
+
+            <div class="w-full max-w-md mx-auto my-4">
+                <img src="./images/chip/chip cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg shadow-md" />
+            </div>
+
+            <div class="flex flex-col gap-2 border-l-2 border-yellow-400 pl-4 mt-4 bg-gray-900 py-4">
+                <p class="font-bold">Key Insight</p>
+                <ul class="list-disc list-inside text-gray-400 space-y-2">
+                    <li>Conducted <b class="text-gray-200">household visits</b> for DHS and other health-related data collection</li>
+                    <li>Interacted with community members, often in challenging physical or social conditions</li>
+                    <li>Used CHIP on <b class="text-gray-200">low-end Android phones</b>, sometimes with intermittent network or power access</li>
+                </ul>
+            </div>
+            <p class="text-gray-400 mt-4">To maintain data integrity and workflow clarity, the app is governed by a <b class="text-gray-200">Role-Based Access Control (RBAC) System</b>, which ensures that each user only accesses relevant modules and permissions based on their designation and facility level.</p>
+        </div>
+
+        <!-- User Interviews -->
+        <div class="flex flex-col gap-2">
+            <p class="text-xl font-bold mt-4">User Interviews</p>
+            <p class="text-gray-400 mt-4">I conducted semi-structured interviews with healthcare workers and supervisors across all three levels:</p>
+            <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+                <li>Conducted <b class="text-gray-200">household visits</b> for DHS and other health-related data collection</li>
+                <li>Interacted with community members, often in challenging physical or social conditions</li>
+                <li>Used CHIP on <b class="text-gray-200">low-end Android phones</b>, sometimes with intermittent network or power access</li>
+            </ul>
+            <p class="text-gray-400 mt-4">These sessions helped identify pain points, mental models, and expectations from CHIP across different roles.</p>
+
+            <div class="w-full max-w-md mx-auto my-4">
+                <img src="./images/chip/chip cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg shadow-md" />
+            </div>
+
+            <div class="flex flex-col gap-2 border-l-2 border-yellow-400 pl-4 mt-4 bg-gray-900 py-4">
+                <p class="font-bold">Key Insight</p>
+                <ul class="list-disc list-inside text-gray-400 space-y-2">
+                    <li>Conducted <b class="text-gray-200">household visits</b> for DHS and other health-related data collection</li>
+                    <li>Interacted with community members, often in challenging physical or social conditions</li>
+                    <li>Used CHIP on <b class="text-gray-200">low-end Android phones</b>, sometimes with intermittent network or power access</li>
+                </ul>
+            </div>
+            <p class="text-gray-400 mt-4">To maintain data integrity and workflow clarity, the app is governed by a <b class="text-gray-200">Role-Based Access Control (RBAC) System</b>, which ensures that each user only accesses relevant modules and permissions based on their designation and facility level.</p>
+        </div>
+    </div>
     
 
 </body>
