key insight done

--- a/project-1.html
+++ b/project-1.html
@@ -91,38 +91,85 @@
     <hr class="border-t-2 border-gray-700 mx-4 lg:w-3/5 lg:mx-auto">
 
     <!-- Problem Statement -->
-    <div class="flex flex-col px-4">
-        <p class="text-2xl font-bold">Problem Statement</p>
-        <div class="border-b-4 border-yellow-400 w-16 mt-2"></div>
+    <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
+        <!-- Section Header -->
+        <div class="flex flex-col items-center gap-8">
+            <div class="flex flex-col gap-2 items-center">
+                <p class="text-2xl font-bold">Problem Statement</p>
+                <div class="border-b-4 border-yellow-400 w-16"></div>
+            </div>
+            <p class="text-gray-400 text-center lg:w-4/5">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+        </div>
 
-        <!-- Context & Background -->
-        <p class="text-xl font-bold mt-4">Context & Background</p>
-        <p class="text-gray-400 mt-4">CHIP is accessed by healthcare workers across a <b class="text-gray-200">three-tiered hierarchy:</b></p>
-        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
-            <li><b class="text-gray-200">Village Level:</b> ASHA workers</li>
-            <li><b class="text-gray-200">Sub-Health Center (SHC) Level:</b> ANMs and CHOs</li>
-            <li><b class="text-gray-200">Primary Health Center (PHC) Level:</b> Medical Officers (MOs), Staff Nurses, Pharmacists, and Lab Technicians</li>
-        </ul>
-        <p class="text-gray-400 mt-4">To maintain data integrity and workflow clarity, the app is governed by a <b class="text-gray-200">Role-Based Access Control (RBAC) System</b>, which ensures that each user only accesses relevant modules and permissions based on their designation and facility level.</p>
+        <div class="grid grid-cols-1 gap-4">
+            <!-- Context & Background -->
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
+                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <p class="text-xl font-bold mt-4">Context & Background</p>
+                <p class="text-gray-400 mt-4">CHIP is accessed by healthcare workers across a <b class="text-gray-200">three-tiered hierarchy:</b></p>
+                <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+                <li><b class="text-gray-200">Village Level:</b> ASHA workers</li>
+                <li><b class="text-gray-200">Sub-Health Center (SHC) Level:</b> ANMs and CHOs</li>
+                <li><b class="text-gray-200">Primary Health Center (PHC) Level:</b> Medical Officers (MOs), Staff Nurses, Pharmacists, and Lab Technicians</li>
+                </ul>
+                <p class="text-gray-400 mt-4">To maintain data integrity and workflow clarity, the app is governed by a <b class="text-gray-200">Role-Based Access Control (RBAC) System</b>, which ensures that each user only accesses relevant modules and permissions based on their designation and facility level.</p>
+            </div>
 
-        <!-- User Needs & Business Goals -->
-        <p class="text-xl font-bold mt-4">User Needs & Business Goals</p>
-        <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
-            <li>Field users needed <b class="text-gray-200">streamlined workflows</b> tailored to their daily tasks.</li>
-            <li>Supervisors required <b class="text-gray-200">visibility into data</b> across levels without clutter.</li>
-            <li>Khushi Baby NGO aimed to <b class="text-gray-200">ensure security, accuracy, and hierarchy alignment</b> across users.</li>
-        </ul>
+            <!-- User Needs & Business Goals -->
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
+                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <p class="text-xl font-bold mt-4">User Needs & Business Goals</p>
+                <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+                    <li>Field users needed <b class="text-gray-200">streamlined workflows</b> tailored to their daily tasks.</li>
+                    <li>Supervisors required <b class="text-gray-200">visibility into data</b> across levels without clutter.</li>
+                    <li>Khushi Baby NGO aimed to <b class="text-gray-200">ensure security, accuracy, and hierarchy alignment</b> across users.</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
-    <hr class="border-t-2 border-gray-700 mx-4 lg:w-2/3 lg:mx-auto">
+    <hr class="border-t-2 border-gray-700 mx-4 lg:w-3/5 lg:mx-auto">
 
     <!-- Research -->
-    <div class="flex flex-col gap-6 px-4">
+    <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
         <!-- Section Header -->
-        <div class="flex flex-col">
-            <p class="text-2xl font-bold">Research</p>
-            <div class="border-b-4 border-yellow-400 w-16 mt-2"></div>
+        <div class="flex flex-col items-center gap-8">
+            <div class="flex flex-col gap-2 items-center">
+                <p class="text-2xl font-bold">Research</p>
+                <div class="border-b-4 border-yellow-400 w-16"></div>
+            </div>
+            <p class="text-gray-400 text-center lg:w-4/5">Led the entire design process across modules and user levels—translating complex workflows into intuitive, role-sensitive experiences.</p>
+        </div>
+
+        <div class="grid grid-cols-1 gap-4">
+            <!-- Field Observations (Shadowing ASHAs and ANMs) -->
+            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
+                <p class="text-xl font-bold mt-4">Field Observations (Shadowing ASHAs and ANMs)</p>
+                <p class="text-gray-400 mt-4">To understand the real-world context of CHIP usage, I conducted immersive field visits to rural areas. I shadowed <b class="text-gray-200">ASHAs and ANMs during their daily routines</b>, particularly while they:</p>
+                <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
+                    <li>Conducted <b class="text-gray-200">household visits</b> for DHS and other health-related data collection</li>
+                    <li>Interacted with community members, often in challenging physical or social conditions</li>
+                    <li>Used CHIP on <b class="text-gray-200">low-end Android phones</b>, sometimes with intermittent network or power access</li>
+                </ul>
+
+                <div class="w-full mx-auto my-4">
+                    <img src="./images/chip/chip cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg shadow-md" />
+                </div>
+
+                <div class="flex flex-col gap-2 border-l-2 border-yellow-400 pl-4 bg-gray-900 py-1">
+                    <p class="font-bold">Key Insight</p>
+                    <ul class="list-disc list-inside text-gray-400 space-y-2">
+                        <li>Conducted <b class="text-gray-200">household visits</b> for DHS and other health-related data collection</li>
+                        <li>Interacted with community members, often in challenging physical or social conditions</li>
+                        <li>Used CHIP on <b class="text-gray-200">low-end Android phones</b>, sometimes with intermittent network or power access</li>
+                    </ul>
+                </div>
+                <p class="text-gray-400 mt-4">To maintain data integrity and workflow clarity, the app is governed by a <b class="text-gray-200">Role-Based Access Control (RBAC) System</b>, which ensures that each user only accesses relevant modules and permissions based on their designation and facility level.</p>
+            </div>
+
+
+
         </div>
 
         <!-- Field Observations (Shadowing ASHAs and ANMs) -->
