--- a/project-1.html
+++ b/project-1.html
@@ -145,7 +145,8 @@
         <div class="grid grid-cols-1 gap-4">
             <!-- Field Observations (Shadowing ASHAs and ANMs) -->
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
-                <p class="text-xl font-bold mt-4">Field Observations (Shadowing ASHAs and ANMs)</p>
+                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <p class="text-xl font-bold">Field Observations (Shadowing ASHAs and ANMs)</p>
                 <p class="text-gray-400 mt-4">To understand the real-world context of CHIP usage, I conducted immersive field visits to rural areas. I shadowed <b class="text-gray-200">ASHAs and ANMs during their daily routines</b>, particularly while they:</p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
                     <li>Conducted <b class="text-gray-200">household visits</b> for DHS and other health-related data collection</li>
