bottom bar done

--- a/project-1.html
+++ b/project-1.html
@@ -590,8 +590,8 @@
     </div>
 
     <!-- Bottom Bar -->
-    <div class="w-full flex items-center pt-3 pb-2 bg-gray-950 my-4">
-        <p class="font-bold">Thank you for your interest in my work!</p>
+    <div class="w-full flex flex-col gap-2 items-center pt-3 pb-2 bg-gray-950 my-4">
+        <p class="text-xl font-semibold">Thank you for your interest in my work!</p>
         <p class="text-gray-400">Made by Sumit Nikhare.  © 2024 Sumit Nikhare</p>
     </div>
     
