--- a/chip-2.html
+++ b/chip-2.html
@@ -33,7 +33,8 @@
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
           <img src="./images/chip/chip cover.png" alt="Project 1" class="w-full h-40 object-cover">
           <div class="p-4">
-            <h3 class="text-xl font-semibold">Community Health Integrated Platform V2.0</h3>
+            <h3 class="text-2xl font-semibold">Community Health Integrated Platform V2.0</h3>
+            
             <p class="text-gray-600 mt-2">Short description of the project, highlighting key features.</p>
             <a href="./project-1.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded mt-4 hover:bg-blue-700">
               View Details
