--- a/project-1.html
+++ b/project-1.html
@@ -41,23 +41,35 @@
         <svg class="col" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M11 2.206l-6.235 7.528-.765-.645 7.521-9 7.479 9-.764.646-6.236-7.53v21.884h-1v-21.883z"/></svg>
     </button>
 
+    <!-- Top Bar -->
     <header id="navbar" class="fixed top-0 left-0 w-full bg-gray-950 text-white p-4 shadow-lg z-50 navbar-transition">
         <div class="flex flex-col gap-3 justify-between items-center">
-          <h1 class="text-2xl font-semibold">sumit.design</h1>
-          <nav>
-            <ul class="flex space-x-6">
-              <li><a href="#" class="text-white hover:text-amber-500 py-2">About me</a></li>
-              <li><a href="#" class="text-white hover:text-amber-500 py-2">Projects</a></li>
-              <li><a href="#" class="text-white hover:text-amber-500 py-2">Contact</a></li>
-            </ul>
-          </nav>
+            <h1 class="text-2xl font-medium">sumit.design</h1>
+            <nav>
+                <ul class="flex space-x-6">
+                <li><a href="#" class="text-white hover:text-amber-500 py-2">About me</a></li>
+                <li><a href="#" class="text-white hover:text-amber-500 py-2">Projects</a></li>
+                <li><a href="#" class="text-white hover:text-amber-500 py-2">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     <!-- Project Hero -->
     <div class="flex flex-col justify-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
-        <h1 class="text-3xl font-bold">Community Health Integrated Platform (CHIP) V2.0</h1>
-        <h2 class="text-lg text-gray-600 mt-4 italic">Streamlining Healthcare Operations at the Grassroots</h2>
+        <div>
+            <h1 class="text-3xl font-bold">Community Health Integrated Platform (CHIP) V2.0</h1>
+            <h2 class="text-lg text-gray-600 mt-4 italic">Streamlining Healthcare Operations at the Grassroots</h2>
+            <!-- <svg
+            class="absolute top-4 right-4 w-16 h-16 text-amber-400 opacity-70 z-0 animate-bounce"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            >
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+            </svg> -->
+        </div>
+        
         <div class="lg:w-4/5 mt-4 lg:mx-auto">
             <img src="./images/chip/chip cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg lg:rounded-4xl" />
         </div>
@@ -69,6 +81,7 @@
                 <img src="./images/chip/chip cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg lg:rounded-4xl"/>
             </div>
         </div> -->
+
     </div>
 
     <!-- <hr class="border-t-2 border-gray-700 mx-4 lg:w-3/5 lg:mx-auto"> -->
