--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
 
     <!-- Contact me -->
     <div class="w-full flex flex-col gap-4 items-center py-16 mt-8">
-        <p class="text-6xl font-semibold">Interested in collaboration?</p>
-        <p class="text-2xl mt-4">Let's discuss what we can create together.</p>
-        <button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max mt-2">Say Hello!!!</button>
+        <p class="text-6xl font-semibold text-center">Interested in collaboration?</p>
+        <p class="text-2xl mt-4 text-center">Let's discuss what we can create together.</p>
+        <button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max mt-2">Let's Connect!!!</button>
     </div>
 
     <!-- Bottom Bar -->
     <div class="w-full flex flex-col gap-2 items-center py-16 bg-gray-950 mt-8">
         <div class="flex flex-col text-center">
-            <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
+            <p class="text-xl font-semibold m-2">Thanks for stopping by!</p>
             <p class="m-2">Thank you for your interest in my work!</p>
             
         </div>
